--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
   <!-- Title -->
-  <h1>Infinity Scroller - Unsplash API</h1>
+  <h1>Infinity Scroller <span>Unsplash API</span></h1>
   
   <!-- Loader -->
-  <div class="loader" id="loader">
+  <div class="loader" id="loader" hidden>
     <img src="loader.svg" alt="Loading">
+  </div>
+
+  <!-- Image Container -->
+  <div class="image-container" id="image-container">
+    <img src="https://images.unsplash.com/photo-1597087313710-c1389d9b5e5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
+
   </div>
 
   <!-- Script -->
