--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </div>
 
   <!-- Script -->
+  <script type="text/javascript" src="config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
