--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Infinity Scroller <span>Unsplash API</span></h1>
   
   <!-- Loader -->
-  <div class="loader" id="loader" hidden>
+  <div class="loader" id="loader">
     <img src="loader.svg" alt="Loading">
   </div>
 
